.metadata/.plugins/org.eclipse.cdt.ui/_Fury_Zero.build.log
07:58:47 **** Incremental Build of configuration Debug for project _Fury_Zero ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F303x8 -I../Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src\main.o ..\Src\main.c 
..\Src\main.c: In function 'main':
..\Src\main.c:227:12: warning: pointer targets in passing argument 1 of 'sprintf' differ in signedness [-Wpointer-sign]
    sprintf(ADC_buffer, "|A|%u|B|%u|\n\r", ADC_A_Value, ADC_B_Value);
            ^~~~~~~~~~
In file included from d:\program files (x86)\atollic\truestudio for stm32 9.0.0\armtools\arm-atollic-eabi\include\stdio.h:29:0,
                 from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_def.h:50,
                 from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_rcc.h:45,
                 from ../Inc/stm32f3xx_hal_conf.h:196,
                 from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal.h:46,
                 from ..\Src\main.c:40:
d:\program files (x86)\atollic\truestudio for stm32 9.0.0\armtools\arm-atollic-eabi\include\stdio.h:244:5: note: expected 'char * restrict' but argument is of type 'uint8_t * {aka unsigned char *}'
 int _EXFUN(sprintf, (char *__restrict, const char *__restrict, ...)
     ^
..\Src\main.c:227:29: warning: format '%u' expects argument of type 'unsigned int', but argument 3 has type 'uint32_t {aka volatile long unsigned int}' [-Wformat=]
    sprintf(ADC_buffer, "|A|%u|B|%u|\n\r", ADC_A_Value, ADC_B_Value);
                             ^
..\Src\main.c:227:34: warning: format '%u' expects argument of type 'unsigned int', but argument 4 has type 'uint32_t {aka volatile long unsigned int}' [-Wformat=]
    sprintf(ADC_buffer, "|A|%u|B|%u|\n\r", ADC_A_Value, ADC_B_Value);
                                  ^
..\Src\main.c:236:12: warning: pointer targets in passing argument 1 of 'sprintf' differ in signedness [-Wpointer-sign]
    sprintf(ADC_buffer, "|C|%u|D|%u|E|%u|F|%u|\n\r", ADC_C_Value,
            ^~~~~~~~~~
In file included from d:\program files (x86)\atollic\truestudio for stm32 9.0.0\armtools\arm-atollic-eabi\include\stdio.h:29:0,
                 from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_def.h:50,
                 from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_rcc.h:45,
                 from ../Inc/stm32f3xx_hal_conf.h:196,
                 from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal.h:46,
                 from ..\Src\main.c:40:
d:\program files (x86)\atollic\truestudio for stm32 9.0.0\armtools\arm-atollic-eabi\include\stdio.h:244:5: note: expected 'char * restrict' but argument is of type 'uint8_t * {aka unsigned char *}'
 int _EXFUN(sprintf, (char *__restrict, const char *__restrict, ...)
     ^
..\Src\main.c:236:29: warning: format '%u' expects argument of type 'unsigned int', but argument 3 has type 'uint32_t {aka volatile long unsigned int}' [-Wformat=]
    sprintf(ADC_buffer, "|C|%u|D|%u|E|%u|F|%u|\n\r", ADC_C_Value,
                             ^
..\Src\main.c:236:34: warning: format '%u' expects argument of type 'unsigned int', but argument 4 has type 'uint32_t {aka volatile long unsigned int}' [-Wformat=]
    sprintf(ADC_buffer, "|C|%u|D|%u|E|%u|F|%u|\n\r", ADC_C_Value,
                                  ^
..\Src\main.c:236:39: warning: format '%u' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t {aka volatile long unsigned int}' [-Wformat=]
    sprintf(ADC_buffer, "|C|%u|D|%u|E|%u|F|%u|\n\r", ADC_C_Value,
                                       ^
..\Src\main.c:236:44: warning: format '%u' expects argument of type 'unsigned int', but argument 6 has type 'uint32_t {aka volatile long unsigned int}' [-Wformat=]
    sprintf(ADC_buffer, "|C|%u|D|%u|E|%u|F|%u|\n\r", ADC_C_Value,
                                            ^
..\Src\main.c:134:10: warning: unused variable 'val' [-Wunused-variable]
  uint8_t val;
          ^~~
..\Src\main.c: In function 'HAL_Delay_Microseconds':
..\Src\main.c:584:15: error: 'UINT_MAX' undeclared (first use in this function)
   if (uSec > (UINT_MAX / SYSTEM_US_TICKS))
               ^~~~~~~~
..\Src\main.c:584:15: note: each undeclared identifier is reported only once for each function it appears in
..\Src\main.c:584:26: error: 'SYSTEM_US_TICKS' undeclared (first use in this function)
   if (uSec > (UINT_MAX / SYSTEM_US_TICKS))
                          ^~~~~~~~~~~~~~~
Info: Parallel threads used: 1

07:58:47 Build Finished (took 250ms)

